# extrans

./: Cargo.toml  README.md
examples/: example.rs  ido_benchmark_1.rs  ido_example_1.rs  logging_example.rs
src/: extrans_error.rs  lib.rs  log_builder.rs
src/fix/: component.rs  dictionary.rs  field.rs  fix_field.rs  group.rs  message.rs  mod.rs
src/ido/: mod.rs
src/properties/: mod.rs  properties_source.rs
tests/: fix_tests.rs  ido_tests.rs  properties_tests.rs
tests/config/: extrans.properties
