[package]
name = "extrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
glob = "0.3.1"
idf = '0.1.0'
roxmltree = "0.20.0"
serde = "1.0.210"
serde_derive = "1.0.210"
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"